docs/yaml/04-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ganglysvc
  namespace: gangly
  labels:
    app: gangly
spec:
  type: ClusterIP
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: "http"
  selector:
    app: gangly
