docs/yaml/05-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gangly
  namespace: gangly
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - secretName: gangly
    hosts:
    - ${GANGLY_HOST}
  rules:
  - host: ${GANGLY_HOST}
    http:
      paths:
      - backend:
          serviceName: ganglysvc
          servicePort: http
